--- a/contentmanage/setbanner.html
+++ b/contentmanage/setbanner.html
@@ -46,7 +46,7 @@
 <header class="header fixed-top clearfix">
 <!--logo start-->
 <div class="brand">
-    <a href="index.html" class="logo">
+    <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="">
     </a>
     <div class="sidebar-toggle-box">
@@ -86,7 +86,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a class="" href="index.html">
+                    <a class="" href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
