--- a/postloan/repayment_detail.html
+++ b/postloan/repayment_detail.html
@@ -135,8 +135,9 @@
                             <ul class="sub">
                                 <li><a class="alast" href="repayment_in.html">还款中明细</a></li>
                                 <li class="active"><a class="alast" href="repayment_detail.html">还款明细</a></li>
-                                <li><a class="alast" href="">逾期管理</a></li>
-                                <li><a class="alast" href="">催收管理</a></li>
+                                <li><a class="alast" href="repayment_end.html">已还款项目</a></li>
+                                <li><a class="alast" href="repayment_over.html">逾期管理</a></li>
+                                <li><a class="alast" href="collection.html">催收管理</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -486,70 +487,70 @@
                             <td>543.23</td>
                             <td>2017-08-23 14:37:06</td>
                             <td>232.9</td>
-                            <td>2017-08-23 14:37:06</td>
-                            <td>1/5</td>
-                            <td>123.34</td>
-                            <td>还款中</td>
+                            <td>是</td>
+                            <td>2</td>
+                            <td>21.23</td>
+                            <td>已还款</td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>hk2139898</td>
                             <td><a href="#" class="link">江车贷123456</a></td>
                             <td><a href="#" class="link">柯静</a></td>
-                            <td>等额本息</td>
-                            <td>23,456</td>
-                            <td>120</td>
-                            <td>11.0</td>
-                            <td>232.9</td>
                             <td>2017-08-23 14:37:06</td>
                             <td>1/5</td>
-                            <td>123.34</td>
-                            <td>还款中</td>
+                            <td>543.23</td>
+                            <td>2017-08-23 14:37:06</td>
+                            <td>232.9</td>
+                            <td>否</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>已还款</td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>hk2139898</td>
                             <td><a href="#" class="link">江车贷123456</a></td>
                             <td><a href="#" class="link">柯静</a></td>
-                            <td>等额本息</td>
-                            <td>23,456</td>
-                            <td>120</td>
-                            <td>11.0</td>
-                            <td>232.9</td>
                             <td>2017-08-23 14:37:06</td>
                             <td>1/5</td>
-                            <td>123.34</td>
-                            <td>还款中</td>
+                            <td>543.23</td>
+                            <td>2017-08-23 14:37:06</td>
+                            <td>232.9</td>
+                            <td>是</td>
+                            <td>2</td>
+                            <td>21.23</td>
+                            <td>已还款</td>
                         </tr>
                         <tr>
                             <td>4</td>
                             <td>hk2139898</td>
                             <td><a href="#" class="link">江车贷123456</a></td>
                             <td><a href="#" class="link">柯静</a></td>
-                            <td>等额本息</td>
-                            <td>23,456</td>
-                            <td>120</td>
-                            <td>11.0</td>
-                            <td>232.9</td>
                             <td>2017-08-23 14:37:06</td>
                             <td>1/5</td>
-                            <td>123.34</td>
-                            <td>还款中</td>
+                            <td>543.23</td>
+                            <td>2017-08-23 14:37:06</td>
+                            <td>232.9</td>
+                            <td>是</td>
+                            <td>2</td>
+                            <td>21.23</td>
+                            <td>已还款</td>
                         </tr>
                         <tr>
                             <td>4</td>
                             <td>hk2139898</td>
                             <td><a href="#" class="link">江车贷123456</a></td>
                             <td><a href="#" class="link">柯静</a></td>
-                            <td>等额本息</td>
-                            <td>23,456</td>
-                            <td>120</td>
-                            <td>11.0</td>
-                            <td>232.9</td>
                             <td>2017-08-23 14:37:06</td>
                             <td>1/5</td>
-                            <td>123.34</td>
-                            <td>还款中</td>
+                            <td>543.23</td>
+                            <td>2017-08-23 14:37:06</td>
+                            <td>232.9</td>
+                            <td>是</td>
+                            <td>2</td>
+                            <td>21.23</td>
+                            <td>已还款</td>
                         </tr>
                     </tbody>
                 </table>
