--- a/postloan/repayment_in.html
+++ b/postloan/repayment_in.html
@@ -135,8 +135,9 @@
                             <ul class="sub">
                                 <li class="active"><a class="alast" href="repayment_in.html">还款中明细</a></li>
                                 <li><a class="alast" href="repayment_detail.html">还款明细</a></li>
-                                <li><a class="alast" href="">逾期管理</a></li>
-                                <li><a class="alast" href="">催收管理</a></li>
+                                <li><a class="alast" href="repayment_end.html">已还款项目</a></li>
+                                <li><a class="alast" href="repayment_over.html">逾期管理</a></li>
+                                <li><a class="alast" href="collection.html">催收管理</a></li>
                             </ul>
                         </li>
                     </ul>
