--- a/contentmanage/contract_management.html
+++ b/contentmanage/contract_management.html
@@ -427,7 +427,7 @@
                 <div class="panel-body" style="padding-left:0;">
                     <div class="search-box">
                     <div class="form-group fr">   
-                        <button type="button" class="btn btn-info" data-toggle="modal" data-target=".add-admin-modal">新增合同</button>
+                        <a type="button" class="btn btn-info" href="contract_release.html"><i class="fa fa-plus"></i>新增合同</a>
                     </div>
                     </div>
                 </div>
@@ -475,71 +475,6 @@
 <!--main content end-->
 </section>
 <!-- Placed js at the end of the document so the pages load faster -->
-<div class="modal fade add-admin-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="display: none;">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myLargeModalLabel">新增合同</h4>
-            </div>
-            <div class="modal-body">
-                <form class="form-horizontal" method="get">
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label col-lg-3">合同名称：</label>
-                        <div class="col-lg-7">
-                            <div class="input-group" style="width: 350px">
-                                <input type="text" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label col-lg-3">合同编号：</label>
-                        <div class="col-lg-7">
-                            <div class="input-group" style="width: 350px">
-                                <input type="text" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label col-lg-3">合同类型：</label>
-                        <div class="col-lg-7">
-                            <div class="input-group" style="width: 350px">
-                                <input type="text" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label col-lg-3">上传合同：</label>
-                        <div class="col-lg-7">
-                           
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label col-lg-3">合同状态：</label>
-                        <div class="col-lg-9 icheck">
-                            <div class="minimal-blue">
-                                <div class="radio ">
-                                    <input tabindex="3" type="radio"  name="demo-radio">
-                                    <label>正常</label>
-                                </div>
-                            </div>
-                            <div class="minimal-blue">
-                                <div class="radio ">
-                                    <input tabindex="3" type="radio"  name="demo-radio">
-                                    <label>关闭</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-info">确认</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div>
 <!--Core js-->
 <script src="../js/lib/jquery-1.8.3.min.js"></script>
 <script src="../bs3/js/bootstrap.min.js"></script>
